--- a/src/main/resources/fxml/AnotherMessageBox.fxml
+++ b/src/main/resources/fxml/AnotherMessageBox.fxml
@@ -20,7 +20,7 @@
       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
    </rowConstraints>
    <children>
-      <GridPane fx:id="messageGrid" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" prefHeight="142.0" prefWidth="240.0" style="-fx-background-color: skyblue; -fx-background-radius: 10;">
+      <GridPane fx:id="messageGrid" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" prefHeight="142.0" prefWidth="240.0" style="-fx-background-color: PURPLE; -fx-background-radius: 10;">
          <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
          </columnConstraints>
