--- a/src/main/resources/fxml/FolloweFollowingPage.fxml
+++ b/src/main/resources/fxml/FolloweFollowingPage.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<GridPane fx:id="total" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="735.0" prefWidth="892.0" style="-fx-background-color: #007ea7;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.FollowerFollowingPageController">
+<GridPane fx:id="total" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="735.0" prefWidth="892.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.FollowerFollowingPageController">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="48.0" prefWidth="100.0" />
       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="4.0" prefWidth="100.0" />
@@ -24,15 +24,15 @@
     <RowConstraints minHeight="10.0" percentHeight="100.0" prefHeight="30.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <VBox fx:id="middle" prefHeight="200.0" prefWidth="100.0" style="-fx-background-color: #ffb703;" GridPane.columnIndex="1" />
-      <GridPane fx:id="followingGridPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" style="-fx-background-color: red;" GridPane.columnIndex="2">
+      <VBox fx:id="middle" prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1" />
+      <GridPane fx:id="followingGridPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.columnIndex="2">
         <rowConstraints>
           <RowConstraints minHeight="10.0" percentHeight="15.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" percentHeight="7.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <GridPane maxWidth="1.7976931348623157E308" style="-fx-background-color: #003459;">
+            <GridPane maxWidth="1.7976931348623157E308">
                <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="15.0" prefWidth="100.0" />
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -75,10 +75,10 @@
             </GridPane>
             <ScrollPane fitToWidth="true" maxWidth="1.7976931348623157E308" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
                <content>
-                  <VBox fx:id="followingVbox" prefHeight="775.0" prefWidth="413.0" spacing="7.0" style="-fx-background-color: #013dc4;" />
+                  <VBox fx:id="followingVbox" prefHeight="775.0" prefWidth="413.0" spacing="7.0" />
                </content>
             </ScrollPane>
-            <GridPane maxWidth="1.7976931348623157E308" style="-fx-background-color: #003459;" GridPane.rowIndex="2">
+            <GridPane maxWidth="1.7976931348623157E308" GridPane.rowIndex="2">
                <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="12.0" prefWidth="100.0" />
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="68.0" prefWidth="100.0" />
@@ -101,7 +101,7 @@
                         </ImageView>
                      </children>
                   </HBox>
-                  <GridPane fx:id="searchUser2" style="-fx-background-color: #003459;" GridPane.columnIndex="1">
+                  <GridPane fx:id="searchUser2" GridPane.columnIndex="1">
                      <columnConstraints>
                         <ColumnConstraints hgrow="SOMETIMES" maxWidth="218.20001220703125" minWidth="10.0" percentWidth="21.0" prefWidth="104.59998321533203" />
                         <ColumnConstraints hgrow="SOMETIMES" maxWidth="341.40001678466797" minWidth="10.0" percentWidth="90.0" prefWidth="341.40001678466797" />
@@ -122,7 +122,7 @@
                               </ImageView>
                            </children>
                         </HBox>
-                        <TextField fx:id="searchFollowing" prefHeight="26.0" prefWidth="144.0" promptText="Search Id" style="-fx-background-color: #007ea7;" GridPane.columnIndex="1">
+                        <TextField fx:id="searchFollowing" prefHeight="26.0" prefWidth="144.0" promptText="Search Id" GridPane.columnIndex="1">
                            <GridPane.margin>
                               <Insets />
                            </GridPane.margin>
@@ -146,7 +146,7 @@
           <RowConstraints minHeight="10.0" percentHeight="7.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <GridPane minHeight="0.0" minWidth="0.0" style="-fx-background-color: #003459;">
+            <GridPane minHeight="0.0" minWidth="0.0">
                <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="15.0" prefWidth="100.0" />
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -204,10 +204,10 @@
             </GridPane>
             <ScrollPane fitToWidth="true" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
                <content>
-                  <VBox fx:id="followerVbox" prefHeight="772.0" prefWidth="413.0" spacing="7.0" style="-fx-background-color: #013dc4;" />
+                  <VBox fx:id="followerVbox" prefHeight="772.0" prefWidth="413.0" spacing="7.0" />
                </content>
             </ScrollPane>
-            <GridPane style="-fx-background-color: #003459;" GridPane.rowIndex="2">
+            <GridPane GridPane.rowIndex="2">
                <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="12.0" prefWidth="100.0" />
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="68.0" prefWidth="100.0" />
@@ -230,7 +230,7 @@
                         </ImageView>
                      </children>
                   </HBox>
-                  <GridPane fx:id="searchUser" style="-fx-background-color: #003459;" GridPane.columnIndex="1">
+                  <GridPane fx:id="searchUser" GridPane.columnIndex="1">
                      <columnConstraints>
                         <ColumnConstraints hgrow="SOMETIMES" maxWidth="218.20001220703125" minWidth="10.0" percentWidth="21.0" prefWidth="104.59998321533203" />
                         <ColumnConstraints hgrow="SOMETIMES" maxWidth="341.40001678466797" minWidth="10.0" percentWidth="90.0" prefWidth="341.40001678466797" />
@@ -251,7 +251,7 @@
                               </ImageView>
                            </children>
                         </HBox>
-                        <TextField fx:id="searchFollower" prefHeight="26.0" prefWidth="144.0" promptText="Search Id" style="-fx-background-color: #007ea7;" GridPane.columnIndex="1">
+                        <TextField fx:id="searchFollower" prefHeight="26.0" prefWidth="144.0" promptText="Search Id" GridPane.columnIndex="1">
                            <GridPane.margin>
                               <Insets />
                            </GridPane.margin>
