--- a/src/main/resources/fxml/FollowerOrFollowingPopUp.fxml
+++ b/src/main/resources/fxml/FollowerOrFollowingPopUp.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="450.0" style="-fx-background-radius: 40; -fx-background-color: #013dc4;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.OtherUserPageControllers.FollowerOrFollowingPopUpController">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="450.0" style="-fx-background-radius: 40;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.OtherUserPageControllers.FollowerOrFollowingPopUpController">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
   </columnConstraints>
@@ -30,7 +30,7 @@
       </HBox>
       <ScrollPane fitToWidth="true" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2">
          <content>
-            <VBox fx:id="vBox" alignment="TOP_CENTER" prefHeight="678.0" prefWidth="435.0" spacing="7.0" style="-fx-background-color: #013dc4;" />
+            <VBox fx:id="vBox" alignment="TOP_CENTER" prefHeight="678.0" prefWidth="435.0" spacing="7.0" />
          </content>
       </ScrollPane>
       <VBox prefHeight="200.0" prefWidth="100.0" style="-fx-background-color: black;" GridPane.rowIndex="1" />
