--- a/src/main/resources/fxml/Setting.fxml
+++ b/src/main/resources/fxml/Setting.fxml
@@ -3,126 +3,217 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<GridPane fx:id="myGridPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="735.0" prefWidth="947.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.SettingController">
+<GridPane fx:id="myGridPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="0.0" prefHeight="519.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.SettingController">
   <columnConstraints>
-    <ColumnConstraints hgrow="SOMETIMES" maxWidth="600.0" minWidth="10.0" percentWidth="100.0" prefWidth="600.0" />
-    <ColumnConstraints hgrow="SOMETIMES" maxWidth="291.20001220703125" minWidth="0.0" prefWidth="0.0" />
+    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
   </columnConstraints>
   <rowConstraints>
-    <RowConstraints maxHeight="404.8" minHeight="10.0" percentHeight="12.0" prefHeight="66.60001983642579" vgrow="SOMETIMES" />
-    <RowConstraints maxHeight="524.0000305175781" minHeight="0.0" prefHeight="436.0000305175782" vgrow="SOMETIMES" />
-    <RowConstraints maxHeight="196.99997558593753" minHeight="3.999969482421875" prefHeight="91.99996948242188" vgrow="SOMETIMES" />
+    <RowConstraints minHeight="10.0" percentHeight="15.0" prefHeight="30.0" vgrow="SOMETIMES" />
+    <RowConstraints minHeight="10.0" percentHeight="70.0" prefHeight="30.0" vgrow="SOMETIMES" />
+    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <HBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: BLUE SKY;">
+      <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
          <children>
-            <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="71.0" prefWidth="390.0" text="SETTING" textFill="WHITE">
+            <Label prefHeight="46.0" prefWidth="138.0" text="SETTING">
                <font>
-                  <Font name="Bell MT" size="48.0" />
+                  <Font name="Bell MT" size="30.0" />
                </font>
             </Label>
          </children>
       </HBox>
-      <GridPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="438.0" prefWidth="595.0" GridPane.rowIndex="1">
+      <GridPane prefHeight="330.0" prefWidth="600.0" GridPane.rowIndex="1">
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="110.4000244140625" minWidth="0.0" percentWidth="100.0" prefWidth="103.20001220703125" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
         <rowConstraints>
-          <RowConstraints maxHeight="268.7999969482422" minHeight="10.0" percentHeight="20.0" prefHeight="151.19998168945312" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="352.8000244140625" minHeight="10.0" percentHeight="50.0" prefHeight="287.20001831054685" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="352.8000244140625" minHeight="10.0" percentHeight="30.0" prefHeight="287.20001831054685" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="282.20001831054685" minHeight="10.0" prefHeight="181.59998168945313" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="181.60001831054691" minHeight="10.0" prefHeight="181.60001831054691" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: BLUE;">
-               <children>
-                  <Label alignment="CENTER" prefHeight="30.0" prefWidth="598.0" text="PLEASE SELECT THE PROPERTY YOU WANT TO CHANGE " textFill="WHITE">
-                     <font>
-                        <Font name="Bell MT" size="20.0" />
-                     </font>
-                  </Label>
-               </children>
-            </HBox>
-            <HBox alignment="CENTER" prefHeight="240.0" prefWidth="595.0" style="-fx-background-color: BLUE;" GridPane.rowIndex="1">
-               <children>
-                  <GridPane alignment="CENTER" prefHeight="248.0" prefWidth="969.0">
-                    <columnConstraints>
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                    </columnConstraints>
-                    <rowConstraints>
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                    </rowConstraints>
-                     <children>
-                        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
-                           <children>
-                              <ImageView fx:id="myImageView" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
-                           </children>
-                        </HBox>
-                        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1">
-                           <children>
-                              <ChoiceBox fx:id="myChoiceBox" prefHeight="30.0" prefWidth="150.0" style="-fx-background-color: YELLOW;" />
-                           </children>
-                        </HBox>
-                     </children>
-                  </GridPane>
-               </children>
-            </HBox>
-            <GridPane prefHeight="192.0" prefWidth="597.0" GridPane.rowIndex="2">
+            <GridPane GridPane.rowIndex="1">
               <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="292.4000244140625" minWidth="10.0" percentWidth="60.0" prefWidth="214.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="415.5999755859375" minWidth="10.0" percentWidth="40.0" prefWidth="382.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
               </columnConstraints>
               <rowConstraints>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: BLUE;">
+                  <GridPane>
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints maxHeight="86.60001220703126" minHeight="10.0" prefHeight="49.600006103515625" vgrow="SOMETIMES" />
+                      <RowConstraints maxHeight="132.79999389648438" minHeight="10.0" prefHeight="132.79999389648438" vgrow="SOMETIMES" />
+                    </rowConstraints>
                      <children>
-                        <Label fx:id="myLabel1" prefHeight="27.0" prefWidth="294.0" text="ENTER NEW ....." textFill="WHITE">
-                           <font>
-                              <Font name="Bell MT" size="18.0" />
-                           </font>
-                        </Label>
+                        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                           <children>
+                              <Label text="CHANGE ITEMS THEME" />
+                           </children>
+                        </HBox>
+                        <GridPane GridPane.rowIndex="1">
+                          <columnConstraints>
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                          </columnConstraints>
+                          <rowConstraints>
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                          </rowConstraints>
+                           <children>
+                              <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                                 <children>
+                                    <RadioButton fx:id="myNoneRadioButton" mnemonicParsing="false" onAction="#getItem" selected="true" text="NONE">
+                                       <toggleGroup>
+                                          <ToggleGroup fx:id="item" />
+                                       </toggleGroup>
+                                    </RadioButton>
+                                 </children>
+                              </HBox>
+                              <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="1">
+                                 <children>
+                                    <RadioButton fx:id="myPinkRadioButton" mnemonicParsing="false" onAction="#getItem" prefHeight="18.0" prefWidth="90.0" text="PINK" toggleGroup="$item" />
+                                 </children>
+                              </HBox>
+                              <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="2">
+                                 <children>
+                                    <RadioButton fx:id="mySilverRadioButton" mnemonicParsing="false" onAction="#getItem" text="SILVER" toggleGroup="$item" />
+                                 </children>
+                              </HBox>
+                           </children>
+                        </GridPane>
+                     </children>
+                  </GridPane>
+                  <GridPane GridPane.columnIndex="1">
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints maxHeight="86.60001220703126" minHeight="10.0" prefHeight="52.000006103515624" vgrow="SOMETIMES" />
+                      <RowConstraints maxHeight="136.00001831054686" minHeight="10.0" prefHeight="131.1999938964844" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                     <children>
+                        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                           <children>
+                              <Label text="CHANGE BACKGROUND THEME" />
+                              <Label />
+                           </children>
+                        </HBox>
+                        <GridPane GridPane.rowIndex="1">
+                          <columnConstraints>
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                          </columnConstraints>
+                          <rowConstraints>
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                          </rowConstraints>
+                           <children>
+                              <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                                 <children>
+                                    <RadioButton fx:id="myDarkRadioButton" mnemonicParsing="false" onAction="#getBackground" selected="true" text="DARK">
+                                       <toggleGroup>
+                                          <ToggleGroup fx:id="background" />
+                                       </toggleGroup>
+                                    </RadioButton>
+                                 </children>
+                              </HBox>
+                              <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="1">
+                                 <children>
+                                    <RadioButton fx:id="mySkyRadioButton" mnemonicParsing="false" onAction="#getBackground" text="SKY" toggleGroup="$background" />
+                                 </children>
+                              </HBox>
+                           </children>
+                        </GridPane>
+                     </children>
+                  </GridPane>
+                  <GridPane GridPane.columnIndex="2">
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints maxHeight="85.00003662109376" minHeight="10.0" prefHeight="52.59999389648438" vgrow="SOMETIMES" />
+                      <RowConstraints maxHeight="132.19998779296876" minHeight="10.0" prefHeight="129.40000610351564" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                     <children>
+                        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                           <children>
+                              <Label text="CHANGE USER INFORMATION" />
+                           </children>
+                        </HBox>
+                        <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" GridPane.rowIndex="1">
+                           <children>
+                              <ChoiceBox fx:id="myChangeInformationChoiceBox" prefWidth="150.0" />
+                           </children>
+                        </VBox>
+                     </children>
+                  </GridPane>
+               </children>
+            </GridPane>
+            <GridPane>
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints maxHeight="149.60000457763672" minHeight="10.0" prefHeight="134.39999237060547" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="84.00000610351563" minHeight="10.0" prefHeight="46.40000762939454" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <HBox alignment="CENTER" prefHeight="141.0" prefWidth="600.0">
+                     <children>
+                        <ImageView fx:id="myImageView" fitHeight="140.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
                      </children>
                   </HBox>
-                  <HBox alignment="CENTER" prefHeight="132.0" prefWidth="334.0" style="-fx-background-color: BLUE;" GridPane.columnIndex="1">
+                  <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="1">
                      <children>
-                        <TextField fx:id="myTextField" onAction="#getText" style="-fx-background-color: YELLOW;" />
+                        <Button fx:id="myChangeProfileButton" mnemonicParsing="false" onAction="#setMyChangeProfileButton" text="CHANGE PROFILE" />
                      </children>
                   </HBox>
                </children>
             </GridPane>
          </children>
       </GridPane>
-      <GridPane alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="95.0" prefWidth="601.0" GridPane.rowIndex="2">
+      <GridPane GridPane.rowIndex="2">
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="400.0" minWidth="10.0" percentWidth="70.0" prefWidth="400.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="295.20001220703125" minWidth="10.0" prefWidth="200.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="359.2" minWidth="10.0" prefWidth="336.7999755859375" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="306.4000244140625" minWidth="10.0" prefWidth="157.6000244140625" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="195.20001220703125" minWidth="10.0" prefWidth="93.5999755859375" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: BLUE;" GridPane.columnIndex="1">
+            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
                <children>
-                  <Button fx:id="myButton" mnemonicParsing="false" onAction="#change" style="-fx-background-color: YELLOW; -fx-background-radius: 50;" text="CHANGE" />
-               </children>
-            </HBox>
-            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: BLUE;">
-               <children>
-                  <Label fx:id="myLabel2" prefHeight="27.0" prefWidth="393.0" text="..................... CHANGED SUCCESSFULLY" textFill="WHITE">
+                  <Label fx:id="myLabel" prefHeight="27.0" prefWidth="337.0" text="CHANGE ...........">
                      <font>
-                        <Font name="Bell MT" size="20.0" />
+                        <Font name="Bell MT" size="16.0" />
                      </font>
                   </Label>
+               </children>
+            </HBox>
+            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1">
+               <children>
+                  <TextField fx:id="myTextField" />
+               </children>
+            </HBox>
+            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="2">
+               <children>
+                  <Button fx:id="mySubmitButton" mnemonicParsing="false" onAction="#submit" text="SUBMIT" />
                </children>
             </HBox>
          </children>
