--- a/src/main/resources/fxml/ShowAnotherUserPage.fxml
+++ b/src/main/resources/fxml/ShowAnotherUserPage.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Font?>
 
-<GridPane fx:id="all" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" prefHeight="735.0" prefWidth="892.0" style="-fx-background-color: #003459;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.OtherUserPageControllers.ShowAnotherUserPageController">
+<GridPane fx:id="all" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" prefHeight="735.0" prefWidth="892.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.OtherUserPageControllers.ShowAnotherUserPageController">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
   </columnConstraints>
@@ -27,7 +27,7 @@
       <RowConstraints maxHeight="494.5999816894531" minHeight="10.0" prefHeight="460.9999755859375" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <GridPane style="-fx-border-color: black;">
+      <GridPane>
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -177,7 +177,7 @@
                      <children>
                         <HBox alignment="CENTER" prefHeight="71.0" prefWidth="200.0" GridPane.rowIndex="2">
                            <children>
-                              <Button mnemonicParsing="false" onAction="#showFollowersOFUser" style="-fx-background-color: #ffb703; -fx-background-radius: 50;" text="SHOW FOLLOWERS">
+                              <Button mnemonicParsing="false" onAction="#showFollowersOFUser" style="-fx-background-radius: 50;" text="SHOW FOLLOWERS">
                                  <cursor>
                                     <Cursor fx:constant="HAND" />
                                  </cursor></Button>
@@ -185,7 +185,7 @@
                         </HBox>
                         <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="3">
                            <children>
-                              <Button mnemonicParsing="false" onAction="#showFollowingOfUser" style="-fx-background-color: #ffb703; -fx-background-radius: 50;" text="SHOW FOLLOWINGS">
+                              <Button mnemonicParsing="false" onAction="#showFollowingOfUser" style="-fx-background-radius: 50;" text="SHOW FOLLOWINGS">
                                  <cursor>
                                     <Cursor fx:constant="HAND" />
                                  </cursor></Button>
@@ -193,7 +193,7 @@
                         </HBox>
                         <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" GridPane.rowIndex="1">
                            <children>
-                              <Button fx:id="followOrUnFollow" mnemonicParsing="false" onAction="#followOrUnfollow" style="-fx-background-color: #ffb703; -fx-background-radius: 50;" text="FOLLOW/UNFOLLOW">
+                              <Button fx:id="followOrUnFollow" mnemonicParsing="false" onAction="#followOrUnfollow" style="-fx-background-radius: 50;" text="FOLLOW/UNFOLLOW">
                                  <cursor>
                                     <Cursor fx:constant="HAND" />
                                  </cursor></Button>
@@ -201,7 +201,7 @@
                         </VBox>
                         <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
                            <children>
-                              <Button mnemonicParsing="false" onAction="#sendMessage" style="-fx-background-color: #ffb703; -fx-background-radius: 50;" text="SEND MESSAGE">
+                              <Button mnemonicParsing="false" onAction="#sendMessage" style="-fx-background-radius: 50;" text="SEND MESSAGE">
                                  <cursor>
                                     <Cursor fx:constant="HAND" />
                                  </cursor></Button>
@@ -225,8 +225,8 @@
             </VBox>
          </children>
       </GridPane>
-      <HBox prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: #ffb703;" GridPane.rowIndex="2" />
-      <GridPane style="-fx-background-color: #00a8e8;" GridPane.rowIndex="4">
+      <HBox prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="2" />
+      <GridPane GridPane.rowIndex="4">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
@@ -249,14 +249,14 @@
             </HBox>
             <ScrollPane fitToWidth="true" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
                <content>
-                  <VBox fx:id="postFill" prefHeight="874.0" prefWidth="877.0" spacing="20.0" style="-fx-background-color: gray;" />
+                  <VBox fx:id="postFill" prefHeight="874.0" prefWidth="877.0" spacing="20.0" />
                </content>
             </ScrollPane>
          </children>
       </GridPane>
       <ScrollPane fitToWidth="true" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="3">
          <content>
-            <VBox fx:id="userRecommendation" prefHeight="356.0" prefWidth="873.0" spacing="20.0" style="-fx-background-color: green;" />
+            <VBox fx:id="userRecommendation" prefHeight="356.0" prefWidth="873.0" spacing="20.0" />
          </content>
       </ScrollPane>
    </children>
